Refactor and change the Settings style according to our needs
- Add XOSP palette (Midnight and Blue one)
- Add new XOSP Settings dashboard icons
- Update colors and styles
- Some other visual changes in Dashboard

Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/color/storage_wizard_button_red.xml
+++ b/res/color/storage_wizard_button_red.xml
@@ -17,6 +17,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false"
           android:alpha="?android:attr/disabledAlpha"
-          android:color="#fff4511e" />
-    <item android:color="#fff4511e" />
+          android:color="#e74c3c" />
+    <item android:color="#e74c3c" />
 </selector>
