--- a/res/drawable/ic_settings_data_usage.xml
+++ b/res/drawable/ic_settings_data_usage.xml
@@ -1,38 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="48.0"
-        android:viewportHeight="48.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M26.0,4.1
-        l0.0,6.06
-        c6.7,0.97 12.0,6.79 12.0,13.84
-        0.0,1.79 -0.35,3.5 -0.96,5.07
-        l5.2,3.07
-        C43.35,29.65 44.0,26.91 44.0,24.0
-        c0.0,-10.37 -7.89,-18.89 -18.0,-19.9z
-        M24.0,38.0
-        c-7.73,0.0 -14.0,-6.27 -14.0,-14.0 0.0,-7.05 5.22,-12.87 12.0,-13.84
-        l0.0,-6
-        C11.88,5.1 4.0,13.63 4.0,24.0
-        c0.0,11.05 8.94,20.0 19.99,20.0 6.62,0.0 12.47,-3.23 16.11,-8.18
-        l-5.19,-3.06
-        C32.35,35.95 28.42,38.0 24.0,38.0z"/>
+        android:pathData="M306.73437 95.610352C468.98535 90.75 610.03125 233.41602 608.04199 400.7666 606.19629 556.46875 472.33496 698.65625 305.49707 698.73828 152.00977 698.82031 3.0786133 568.0625 3.9399414 396.50098 4.7944336 226.56641 148.29443 90.011719 306.73437 95.610352Zm-9.82324 432.195308c0 -91.50586 0 -179.65527 0 -268.5498 -16.41992 0 -30.58398 0 -44.9873 0 0 91.04785 0 179.19726 0 268.5498 15.55176 0 29.12109 0 44.9873 0zm76.17285 0.76563c0 -59.75977 0 -119.10938 0 -178.54785 -16.16699 0 -29.46289 0 -43.46972 0 0 61.09961 0 119.61523 0 178.54785 15.40136 0 28.1709 0 43.46972 0zM176.0415 397.81348c0 43.68847 0 86.8164 0 129.66406 15.54834 0 29.13135 0 43.19971 0 0 -43.88672 0 -86.17383 0 -129.66406 -15.13135 0 -27.70264 0 -43.19971 0zm229.22608 128.88476c17.36328 0 31.65039 0 45.27441 0 0 -27.34375 0 -52.31543 0 -77.86816 -16.38574 0 -30.33105 0 -45.27441 0 0 27.3164 0 51.41992 0 77.86816z"
+        android:fillColor="@color/theme_accent" />
 </vector>
