--- a/res/drawable/ic_settings_language.xml
+++ b/res/drawable/ic_settings_language.xml
@@ -1,36 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M11.99,2.0C6.47,2.0 2.0,6.48 2.0,12.0s4.47,10.0 9.99,10.0C17.52,22.0 22.0,17.52 22.0,12.0S17.52,2.0 11.99,2.0z
-        m6.93,6.0l-2.95,0.0c-0.32,-1.25 -0.78,-2.45 -1.38,-3.56 1.8,0.63 3.37,1.91 4.33,3.56z
-        M12.0,4.04c0.83,1.2 1.48,2.53 1.91,3.96l-3.82,0.0c0.43,-1.43 1.08,-2.76 1.91,-3.96z
-        M4.26,14.0C4.1,13.36 4.0,12.69 4.0,12.0s0.1,-1.3 0.26,-2.0l3.38,0.0c0.0,0.66 -0.14,1.32 -0.14,2.0 0.0,0.6 0.06,1.3 0.14,2.0L4.26,14.0z
-        m0.82,2.0 l2.95,0.0c0.32,1.2 0.78,2.45 1.38,3.56 -1.84,-0.63 -3.37,-1.9 -4.33,-3.56z
-        m2.95,-8.0 L5.08,8.  c0.96,-1.66 2.49,-2.93 4.33,-3.56 C8.81,5.55 8.35,6.75 8.03,8.0z
-
-        M12.0,19.96c-0.83,-1.2 -1.48,-2.53 -1.91,-3.96l3.82,0.0c-0.43,1.43 -1.08,2.76 -1.91,3.96z
-        M14.34,14.0 L9.66,14.0c-0.09,-0.66 -0.16,-1.32 -0.16,-2.0 0.0,-0.6 0.07,-1.3 0.16,-2.0l4.68,0.0c0.0,0.6 0.16,1.3 0.16,2.0 0.0,0.68 -0.07,1.34 -0.16,2.0z
-        m0.25,5.56c0.6,-1.11 1.06,-2.31 1.38,-3.56l2.95,0.0c-0.96,1.65 -2.49,2.93 -4.33,3.56z
-        M16.36,14.0c0.08,-0.6 0.14,-1.3 0.14,-2.0 0.0,-0.68 -0.06,-1.34 -0.14,-2.0l3.38,0.0c0.1,0.6 0.26,1.3 0.26,2.0s-0.1,1.36 -0.26,2.0l-3.38,0.0z
-        "/>
+        android:pathData="M15.708008 202.41699c6.058594 -2.60254 10.832031 -6.43017 15.611816 -6.43652 186.906736 -0.30469 373.807126 -0.26026 559.844236 -0.26026 3.58692 7.15381 7.10352 10.90528 7.10938 14.66309 0.29199 124.43311 0.29199 248.86572 0.0127 373.29932 -0.0127 3.76367 -3.5039 7.51562 -7.03906 14.61816 -186.09473 0 -373.00781 0.0449 -559.920898 -0.25391 -4.792481 -0.006 -9.581543 -3.78906 -15.618164 -6.34082 0 -129.96875 0 -259.33984 0 -389.28906zM454.23242 476.99121c-97.5 0 -193.11474 0 -288.31689 0 0 28.28516 0 54.61524 0 80.73535 97.1289 0 191.95947 0 288.31689 0 0 -26.85644 0 -52.4375 0 -80.73535zM122.53271 317.92529c0 -29.31982 0 -55.56738 0 -81.61816 -23.994136 0 -45.950679 0 -67.663081 0 0 28.27246 0 54.52637 0 81.61816 23.159668 0 44.329101 0 67.663081 0zm110.54737 -0.0508c0 -29.18652 0 -55.44043 0 -81.61181 -23.93701 0 -45.89649 0 -67.75781 0 0 28.22167 0 54.47558 0 81.61181 23.10546 0 44.27783 0 67.75781 0zm111.47168 -81.44678c-25.27051 0 -47.2334 0 -68.56153 0 0 28.41211 0 54.67237 0 80.3169 24.1084 0 46.0459 0 68.56153 0 0 -27.58057 0 -53.06641 0 -80.3169zm110.18847 -0.46972c-23.97461 0 -45.9248 0 -68.71972 0 0 27.8916 0 54.13916 0 81.25635 23.60058 0 45.53808 0 68.71972 0 0 -27.07911 0 -52.57129 0 -81.25635zm109.83985 81.9165c0 -29.18017 0 -55.42773 0 -81.61181 -23.93653 0 -45.89356 0 -67.75488 0 0 28.22167 0 54.47558 0 81.61181 23.10546 0 44.27539 0 67.75488 0zm-440.62256 116.7583c-0.6792 -29.47851 3.39307 -56.05566 -2.25 -81.65576 -23.400879 0 -44.703614 0 -66.901368 0 0 27.86621 0 54.24072 0 81.65576 23.086426 0 44.36377 0 69.151368 0zm41.06641 -0.69824c23.61621 0 45.66162 0 67.78027 0 0 -28.20898 0 -54.58301 0 -80.08789 -24.23877 0 -46.29346 0 -67.78027 0 0 27.97412 0 53.59961 0 80.08789zM344.18945 353.7324c-24.88281 0 -46.94726 0 -68.77343 0 0 27.86621 0 53.48535 0 80.30371 23.48632 0 45.52832 0 68.77343 0 0 -27.26269 0 -52.87549 0 -80.30371zm109.73242 80.50684c0 -28.27246 0 -54.64014 0 -80.51319 -24.10253 0 -46.16699 0 -68.01562 0 0 27.84717 0 53.46631 0 80.51319 22.63574 0 43.92578 0 68.01562 0zm110.27735 0.21582c0 -28.93848 0 -55.31299 0 -82.72852 -24.32422 1.02198 -46.69336 -3.54199 -67.57031 2.76123 0 27.54248 0 53.17432 0 79.96729 22.88281 0 44.16015 0 67.57031 0z"
+        android:fillColor="@color/theme_accent" />
 </vector>
