--- a/res/drawable/ic_settings_multiuser.xml
+++ b/res/drawable/ic_settings_multiuser.xml
@@ -1,25 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M12.0,12.0c2.21,0.0 4.0,-1.79 4.0,-4.0s-1.79,-4.0 -4.0,-4.0 -4.0,1.79 -4.0,4.0 1.79,4.0 4.0,4.0zm0.0,2.0c-2.67,0.0 -8.0,1.34 -8.0,4.0l0.0,2.0l16.0,0.0l0.0,-2.0c0.0,-2.66 -5.33,-4.0 -8.0,-4.0z"/>
+        android:pathData="M307 682.05469c-83.74902 0 -167.49756 0.17578 -251.246094 -0.0879 -31.12793 -0.0947 -33.8125 -2.8125 -33.831055 -34.5918 -0.09473 -167.50488 -0.02148 -335.00244 0.238282 -502.5 0.04785 -29.21631 3.379883 -32.76123 31.753906 -32.79785 168.750001 -0.2124 337.503911 -0.21973 506.247071 0 28.29297 0.0439 31.70605 3.84521 31.74219 32.79785 0.1914 167.49756 0.27929 334.99512 0.16894 502.49219 -0.0147 31.78711 -2.69531 34.50488 -33.82324 34.59961 -83.74512 0.26367 -167.49805 0.0879 -251.25 0.0879zM141.79492 509.62891c-2.65527 11.02929 -5.31006 22.06054 -8.38281 34.79687 115.2832 0 226.16797 0 338.79297 0 0 -12.83203 0 -23.81055 0 -34.79687 21.96484 0 43.9375 0 65.83008 0 -0.87891 -42.3125 -3.91114 -45.39649 -40.99414 -59.1875 -36.32032 -13.50586 -39.54297 -20.39844 -22.97559 -52.30957 10.44434 -20.11963 3.4209 -60.31495 -12.45117 -75.57129 -13.95996 -13.41797 -30 -6.72364 -47.16797 -7.80762 -24.84375 35.44922 -24.44043 70.54687 -4.11621 105.69629 -4.89258 9.1543 -9.46289 17.72461 -14.04102 26.29297 -44.9707 -10.23828 -56.95996 -38.72266 -31.75 -73.4541 5.45703 -7.50733 10.63477 -17.70264 10.29785 -26.44776 -0.9082 -23.35693 -3.18652 -46.95556 -8.04199 -69.79248 -6.58398 -31.01074 -28.81347 -45.73974 -62.69531 -45.1831 -33.83057 0.55664 -50.39063 12.48779 -57.05566 45.22705 -4.65821 22.88086 -7.0127 46.44287 -7.87354 69.79248 -0.32568 8.74511 4.86328 18.92578 10.31592 26.4331 25.20654 34.70215 13.13623 63.27442 -31.81983 73.41114 -5.04638 -9.53711 -10.09277 -19.08008 -14.88623 -28.14747 21.98731 -34.6289 20.03516 -70.48095 -4.93652 -102.1289 -36.21484 -3.06885 -37.89551 -2.76856 -48.15332 8.70117 -15.70313 17.55615 -19.44922 54.58008 -7.69775 76.05469 12.41064 22.69043 8.23242 37.41894 -13.97461 47.56347 -6.62842 3.0254 -13.86475 4.70215 -20.74219 7.20704 -29.139161 10.63476 -33.427735 18.46484 -28.099122 53.65039 20.646484 0 41.634282 0 62.618162 0z"
+        android:fillColor="@color/theme_accent" />
 </vector>
