--- a/res/drawable/ic_settings_notifications.xml
+++ b/res/drawable/ic_settings_notifications.xml
@@ -1,25 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M12.0,22.0c1.1,0.0 2.0,-0.9 2.0,-2.0l-4.0,0.0c0.0,1.0 0.89,2.0 2.0,2.0zm6.0,-6.0l0.0,-5.0c0.0,-3.07 -1.64,-5.64 -4.5,-6.32L13.5,4.0c0.0,-0.83 -0.67,-1.5 -1.5,-1.5s-1.0,0.67 -1.5,1.5l0.0,0.68C7.63,5.36 6.0,7.92 6.0,11.0l0.0,5.0l-2.0,2.0l0.0,1.0l16.0,0.0l0.0,-1.0l-2.0,-2.0z"/>
+        android:pathData="M5.987793 413.57812c0 -11.71875 0 -23.4375 0 -35.15722 0.340332 -1.6836 0.8754883 -3.35352 0.9936523 -5.05274C9.9003906 331.51514 20.973144 291.87012 41.224609 255.20898 87.896973 170.71582 158.77832 118.96777 253.73437 100.72168c11.44288 -2.198243 23.11915 -3.186036 34.68653 -4.733887 11.71972 0 23.43847 0 35.15722 0 1.50879 0.330566 3.00293 0.862793 4.52637 0.961914 31.60645 2.054199 62.24121 8.779293 91.2334 21.409663 99.74316 43.45215 160.66797 118.56934 181.93066 225.43604 2.26856 11.40625 3.19336 23.07764 4.74317 34.62549 0 11.71973 0 23.43848 0 35.15723 -0.3418 1.68457 -0.87598 3.35449 -0.9961 5.05078 -2.93359 41.85156 -13.98632 81.50683 -34.24511 118.16211 -46.68653 84.46484 -117.5459 136.24511 -212.50489 154.48437 -11.44335 2.2002 -23.12011 3.18652 -34.6875 4.73633 -11.71875 0 -23.4375 0 -35.15722 0 -1.50781 -0.3291 -3.00195 -0.85938 -4.52442 -0.96094C241.83252 692.20605 201.99121 681.10742 165.16016 660.74805 80.686523 614.05664 28.933594 543.17578 10.716797 448.20898 8.5253906 436.7832 7.5341797 425.12891 5.987793 413.57812ZM283.69922 279.59277c-1.46387 0.54785 -2.53076 1.0459 -3.65137 1.35352 -48.42041 13.31055 -78.51953 50.24414 -82.6123 100.31348 -1.97168 24.10742 -5.07715 48.12695 -7.89649 72.15722 -0.25879 2.2041 -1.64843 4.9541 -3.40234 6.19434 -9.05274 6.41601 -12.49121 15.12109 -11.61719 25.85644 0.56152 6.9043 3.68164 10.96192 10.41211 12.28028 4.93945 0.96679 10.06836 1.32324 15.11231 1.33007 70.69482 0.0781 141.38769 0.0811 212.08105 -0.004 5.04492 -0.006 10.15625 -0.44531 15.11035 -1.36524 5.12402 -0.95703 9.08887 -4.10156 9.91895 -9.51953 1.71679 -11.18164 -0.99024 -20.79101 -10.48243 -28.01465 -2.03125 -1.54785 -3.9121 -4.46777 -4.20507 -6.95019 -2.96289 -25.19336 -5.47852 -50.43945 -8.32422 -75.64746 -5.23047 -46.31836 -29.90039 -77.58057 -73.39453 -94.06494 -3.97168 -1.50537 -8.13184 -2.51612 -12.44825 -3.83155 0 -8.77734 0.0615 -17.35839 -0.0127 -25.9375 -0.11719 -13.75634 -9.35938 -23.69775 -22.08399 -23.87011 -12.81298 -0.17285 -22.38818 10.02929 -22.49316 24.05664 -0.0635 8.57324 -0.0107 17.14599 -0.0107 25.66308zm60.64258 243.61426c-25.87891 0 -51.30567 0 -76.70508 0 -1.16406 20.5957 17.4248 38.9336 38.69043 38.59863 21.39648 -0.33691 39.3291 -18.37207 38.01465 -38.59863z"
+        android:fillColor="@color/theme_accent" />
 </vector>
