--- a/res/drawable/ic_settings_wireless.xml
+++ b/res/drawable/ic_settings_wireless.xml
@@ -1,25 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="18.0"
-        android:viewportHeight="18.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M9.01,15.99l8.8,-10.96C17.47,4.77 14.08,2.0 9.0,2.0S0.53,4.7 0.19,5.03l8.8,10.96l0.02,0.0z"/>
+        android:pathData="M608.25293 397.50977C608.7793 562.37891 476.18945 694.51758 313.63086 698.74902 148.42676 703.04199 4.8652344 565.40723 5.6513672 400.0459 6.4545898 231.75879 136.5083 99.421875 300.54687 95.286133 465.7168 91.129883 611.85547 228.59375 608.25293 397.50977ZM134.66602 330.36035c10.14453 12.5918 19.34912 24.02149 28.32812 35.16406 96.30811 -60.07421 185.81445 -63.73828 288.41504 -0.0342 9.00977 -11.33398 18.17676 -22.86621 27.2207 -34.24121 -80.05566 -80.00781 -249.57666 -81.21777 -343.96386 -0.88867zm73.35986 94.01465c67.96631 -44.7959 133.4751 -42.35547 198.9292 -0.31445 10.08984 -13.13184 19.03808 -24.77344 27.82226 -36.20313 -70.27343 -63.34863 -203.50927 -55.71972 -254.13623 2.11231 8.45264 10.62304 17.05909 21.43066 27.38477 34.40527zm15.63721 20.89062c9.13623 11.75782 18.23144 23.45411 28.3623 36.49708 36.97217 -22.4834 73.4043 -22.28516 110.29102 0.0752 10.19238 -13.24805 19.22949 -24.99902 28.31445 -36.81836 -54.3457 -38.60254 -113.47656 -38.5 -166.96777 0.24609zm83.21386 108.45899c13.7334 -18.36816 26.12696 -34.95215 39.17676 -52.41113 -27.97949 -16.30371 -51.38232 -17.28125 -77.86133 1.28515 12.35596 16.33106 24.01123 31.73926 38.68457 51.12598z"
+        android:fillColor="@color/theme_accent" />
 </vector>
