--- a/res/color/fingerprint_indicator_background_activated.xml
+++ b/res/color/fingerprint_indicator_background_activated.xml
@@ -16,5 +16,5 @@
 -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:alpha="0.5" android:color="?android:attr/colorAccent" />
+    <item android:alpha="0.5" android:color="@color/theme_primary" />
 </selector>
