--- a/res/color/storage_wizard_button.xml
+++ b/res/color/storage_wizard_button.xml
@@ -17,6 +17,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false"
           android:alpha="?android:attr/disabledAlpha"
-          android:color="?android:attr/colorAccent" />
-    <item android:color="?android:attr/colorAccent" />
+          android:color="@color/theme_primary_dark" />
+    <item android:color="@color/theme_primary_dark" />
 </selector>
