--- a/res/drawable/ic_settings_about.xml
+++ b/res/drawable/ic_settings_about.xml
@@ -1,25 +1,27 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M11.0,17.0l2.0,0.0l0.0,-6.0l-2.0,0.0l0.0,6.0zm1.0,-15.0C6.48,2.0 2.0,6.48 2.0,12.0s4.48,10.0 10.0,10.0 10.0,-4.48 10.0,-10.0S17.52,2.0 12.0,2.0zm0.0,18.0c-4.41,0.0 -8.0,-3.59 -8.0,-8.0s3.59,-8.0 8.0,-8.0 8.0,3.59 8.0,8.0 -3.59,8.0 -8.0,8.0zM11.0,9.0l2.0,0.0L13.0,7.0l-2.0,0.0l0.0,2.0z"/>
+        android:pathData="M545 201.53516c0 -50.85889 0.21582 -101.726078 -0.11621 -152.584965 -0.11621 -18.353027 -6.59082 -24.927246 -23.82324 -25.840332 -8.4502 -0.439941 -16.9502 -0.07471 -25.4336 -0.07471 -98.8955 0 -197.78711 0 -296.68261 0 -33.90821 0 -67.82129 -0.307128 -101.721684 0.107911 -23.3125 0.282226 -27.99414 5.370605 -28.147949 29.999023C68.804687 96.937012 69 140.74023 69 184.53516c0 110.5 0 221 0 331.5 0 74.91406 -0.141113 149.8291 0.0791 224.73535 0.07422 24.81152 4.755859 30.10644 28.014648 30.14844 139.930662 0.23242 279.865232 0.23242 419.799802 0 23.25879 -0.042 27.94825 -5.33692 28.02344 -30.12403 0.23242 -72.08398 0.083 -144.17578 0.083 -216.25976 0 -107.66993 0 -215.33057 0 -323zM252.33105 57.483398c19.69776 -0.705566 39.42872 -0.448242 59.15137 -0.448242 16.9082 0 33.81738 -0.166015 50.71778 0.290527 1.48535 0.0415 4.2832 4.34961 3.99316 6.308594 -0.52344 3.61084 -2.85547 9.936035 -4.51563 9.960938 -36.61523 0.572754 -73.25097 0.514648 -109.87793 0.157715 -1.45263 -0.0166 -4.27929 -4.357911 -3.99267 -6.316895 0.52685 -3.61084 2.79736 -9.88623 4.52392 -9.952637zM511 677.53516c-112.12695 0 -221.81348 0 -331.5 0 -24.92285 0 -49.84619 0 -76.5 0 0 -55.44922 0 -108.47461 0 -161.5 0 -68 0 -136 0 -204 0 -42.5 0 -85 0 -127.5 0 -21.12549 0 -42.25098 0 -63.37647 0.90918 -1.0293 1.68066 -2.24121 2.76416 -3.04639 1.01709 -0.74707 2.35303 -1.51074 3.55273 -1.51074 116.896 -0.0747 233.79151 -0.0664 350.68311 -0.0664 16.40234 0 32.80469 0 51 0 0 29.86621 0 57.4331 0 85 0 39.66943 0 79.33056 0 119 0 53.83056 0 107.66992 0 161.5 0 14.16992 0 28.33007 0 42.5 0 50.41015 0 100.83007 0 153z"
+        android:fillColor="@color/theme_accent" />
+    <path
+        android:pathData="M511 320.53516c0 -39.66944 0 -79.33057 0 -119 0 -27.5669 0 -55.13379 0 -85 -18.19531 0 -34.59766 0 -51 0 -116.8916 0 -233.78711 -0.008 -350.68311 0.0664 -1.1997 0 -2.53564 0.76367 -3.55273 1.51074 -1.0835 0.80518 -1.85498 2.01709 -2.76416 3.04639 0 21.12549 0 42.25098 0 63.37647 0 42.5 0 85 0 127.5 0 68 0 136 0 204 0 53.02539 0 106.05078 0 161.5 26.65381 0 51.57715 0 76.5 0 109.68652 0 219.37305 0 331.5 0 0 -52.16993 0 -102.58985 0 -153 0 -14.16993 0 -28.33008 0 -42.5 0 -53.83008 0 -107.66944 0 -161.5zM324 558.88379c-13.27344 -0.72168 -23.72363 -1.28613 -34 -1.84277 0 -35.49414 0 -68 0 -100.50586 0 -42.5 0 -85 0 -127.5 10.6748 0 21.33301 0 34 0 0 15.58056 0 29.03613 0 42.5 0 2.83056 0 5.66943 0 8.5 0 59.00195 0 118.0039 0 178.84863zM310.1709 235.51855c17.46484 -0.22412 22.83496 10.06055 22.3291 25.51661 -2.83887 8.5 -5.66113 17 -8.5 25.5 -11.33887 0 -22.66113 0 -34 0 -2.83496 -8.5 -5.66504 -17 -8.5 -25.5 0 -5.66944 0 -11.33057 0 -17 2.83496 -2.83057 5.66504 -5.66944 8.5 -8.5 6.72363 0 13.44727 0.0747 20.1709 -0.0166z"
+        android:fillColor="#3498db" />
 </vector>
