--- a/res/drawable/ic_settings_accessibility.xml
+++ b/res/drawable/ic_settings_accessibility.xml
@@ -1,25 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M12.0,2.0c1.1,0.0 2.0,0.9 2.0,2.0s-0.9,2.0 -2.0,2.0 -2.0,-0.9 -2.0,-2.0 0.9,-2.0 2.0,-2.0zm9.0,7.0l-6.0,0.0l0.0,13.0l-2.0,0.0l0.0,-6.0l-2.0,0.0l0.0,6.0L9.0,22.0L9.0,9.0L3.0,9.0L3.0,7.0l18.0,0.0l0.0,2.0z"/>
+        android:pathData="M303.68848 698.3125C146.0376 702.47559 4.9233398 567.90332 4.2260742 395.17236 3.5698242 232.1626 145.21729 92.449707 311.44043 95.382324 466.8418 98.130371 610.22559 231.49268 607.74414 402.89746 605.37891 565.46973 463.875 705.30566 303.68848 698.3125Zm58.93261 -113.4834c0 -82.45508 0 -162.25781 0 -244.64502 38.34278 0 73.9375 0 109.39551 0 0 -12.53027 0 -22.36035 0 -32.29297 -112.00683 0 -222.12744 0 -332.47314 0 0 11.60743 0 21.42383 0 33.91309 37.29687 0 72.87109 0 111.09765 0 0 82.46924 0 162.28564 0 242.17725 12.63282 0 22.42871 0 34.93164 0 0 -37.3584 0 -72.91895 0 -108.38379 15.03955 0 27.2417 0 42.10987 0 0 37.21484 0 72.78222 0 109.23144 11.71679 0 20.70605 0 34.93847 0zm-53.9082 -376.77685c-22.66162 -1.01172 -41.29639 14.17089 -43.60693 35.51269 -2.16016 19.98828 16.51562 40.46192 37.81006 41.45996 22.55859 1.05957 41.42578 -14.37597 43.58593 -35.66308 2.05078 -20.22071 -16.36523 -40.35938 -37.78906 -41.30957z"
+        android:fillColor="@color/theme_accent" />
 </vector>
