--- a/res/drawable/ic_settings_accounts.xml
+++ b/res/drawable/ic_settings_accounts.xml
@@ -1,29 +1,27 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M3.0,5.0
-        l0.0,14.0c0.0,1.0 0.89,2.0 2.0,2.0l14.0,0.0c1.1,0.0 2.0,-0.9 2.0,-2.0
-        L21.0,5.0c0.0,-1.1 -0.9,-2.0 -2.0,-2.0
-        L5.0,3.0c-1.11,0.0 -2.0,0.9 -2.0,2.0zm12.0,4.0c0.0,1.66 -1.34,3.0 -3.0,3.0s-3.0,-1.34 -3.0,-3.0 1.34,-3.0 3.0,-3.0 3.0,1.34 3.0,3.0zm-9.0,8.0c0.0,-2.0 4.0,-3.1 6.0,-3.1s6.0,1.1 6.0,3.1l0.0,1.0
-        l-12.0,0l0.0,-1.0z"/>
+        android:pathData="M17.632324 628.71387c0 -133.11035 0 -263.41162 0 -400.09229 81.497559 -1.87597 161.506836 -0.73974 244.407226 -0.80322 0 -20.37891 0 -45.93799 0 -74.10547 30.17969 0 57.59522 0 88.10205 0 0 22.4707 0 45.84912 0 74.04199 83.14746 0 163.42676 0 246.97461 0 0 135.88135 0 266.93457 0 400.95899 -192.88672 0 -383.59521 0 -579.483886 0zm28.615235 -34.17578c174.481441 0 345.730961 0 516.914551 0 0 -97.417 0 -192.34668 0 -287.39307 -173.35449 0 -344.69629 0 -516.914551 0 0 96.49658 0 190.64893 0 287.39307z"
+        android:fillColor="@color/theme_accent" />
+    <path
+        android:pathData="M395.76562 529.93164c-59.42675 0 -118.5166 0 -179.46679 0 -4.28174 -23.86133 3.52588 -39.9082 26.02832 -48.54687 7.0332 -2.69727 14.17431 -5.18555 20.99512 -8.35938 17.12255 -7.9668 22.01025 -20.3125 11.09863 -36.53711 -12.47315 -18.54883 -6.30957 -37.41406 -1.84375 -56.1709 3.99267 -16.75781 14.71045 -25.06689 32.54443 -25.63818 17.82373 -0.57129 28.97022 7.28076 34.51807 23.35303 8.77246 25.46679 8.26465 50.35644 -11.88281 77.73925 13.86328 8.66407 25.07324 17.93946 37.92089 23.20704 22.94043 9.41406 34.91211 23.72851 30.08789 50.95312z"
+        android:fillColor="@color/theme_accent" />
 </vector>
