--- a/res/drawable/ic_settings_backup.xml
+++ b/res/drawable/ic_settings_backup.xml
@@ -1,25 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M19.35,10.04C18.67,6.59 15.64,4.0 12.0,4.0 9.11,4.0 6.6,5.64 5.35,8.04 2.34,8.36 0.0,10.91 0.0,14.0c0.0,3.31 2.69,6.0 6.0,6.0l13.0,0.0c2.76,0.0 5.0,-2.24 5.0,-5.0 0.0,-2.64 -2.05,-4.78 -4.65,-4.96zM14.0,13.0l0.0,4.0l-4.0,0.0l0.0,-4.0L7.0,13.0l5.0,-5.0 5.0,5.0l-3.0,0.0z"/>
+        android:pathData="M306 98C141.41797 98 8 231.41797 8 396 8 560.58203 141.41797 694 306 694 470.58203 694 604 560.58203 604 396 604 231.41797 470.58203 98 306 98Zm6.66992 477.08789c-26.68164 0 -53.41992 -6.15039 -77.33008 -17.7832 -0.40234 -0.19922 -0.70703 -0.54883 -0.84765 -0.97266 -0.13672 -0.42383 -0.10156 -0.88672 0.11133 -1.28516l25.32226 -47.97265c0.41406 -0.77735 1.36328 -1.09375 2.16016 -0.72461 15.72265 7.36523 33.21484 11.25586 50.58398 11.25586 65.7793 0 119.29102 -53.51367 119.29102 -119.29102 0 -44.31445 -24.36914 -84.73828 -63.59766 -105.49023 -17.06641 -9.02735 -36.32422 -13.79688 -55.69336 -13.79688 -65.77539 0 -119.29101 53.51172 -119.29101 119.28907 0 2.27734 1.85351 4.125 4.12695 4.125l46.16797 0c0.66406 0 1.26758 0.40429 1.52539 1.01953 0.25391 0.62109 0.11328 1.32812 -0.36133 1.80078l-77.73437 77.73242c-0.61719 0.61914 -1.71289 0.61914 -2.33399 0L87.039062 405.26172c-0.470703 -0.47266 -0.613281 -1.1836 -0.357421 -1.80078 0.255859 -0.61524 0.857421 -1.01953 1.52539 -1.01953l43.566409 0c2.27734 0 4.12695 -1.85157 4.12695 -4.125 0 -97.47266 79.29883 -176.76954 176.76953 -176.76954 28.73633 0 57.27539 7.0625 82.5293 20.42188 58.13281 30.75 94.24219 90.65625 94.24219 156.34766 0 97.47265 -79.30079 176.77148 -176.77149 176.77148zm-16.02539 -172.02734l5.67188 -92.64453c0.0508 -0.87305 0.77148 -1.54883 1.64453 -1.54883l15.17187 0c0.8711 0 1.59375 0.67969 1.64453 1.55078l4.89063 81.69922 54.71875 61.54492c0.57812 0.6543 0.55078 1.64844 -0.0645 2.26367l-10.72657 10.72656c-0.31836 0.32032 -0.74609 0.48047 -1.16601 0.48047 -0.39063 0 -0.78321 -0.13476 -1.09571 -0.41406l-70.14257 -62.32422c-0.37891 -0.33594 -0.58204 -0.82812 -0.54688 -1.33398z"
+        android:fillColor="@color/theme_accent" />
 </vector>
