--- a/res/drawable/ic_settings_sync.xml
+++ b/res/drawable/ic_settings_sync.xml
@@ -1,25 +1,24 @@
-<!--
-    Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2016 The Xperia Open Source Project
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-         http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorAccent">
+    android:viewportWidth="612"
+    android:viewportHeight="792"
+    android:width="612dp"
+    android:height="792dp">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M12.0,4.0L12.0,1.0L8.0,5.0l4.0,4.0L12.0,6.0c3.31,0.0 6.0,2.69 6.0,6.0 0.0,1.01 -0.25,1.97 -0.7,2.8l1.46,1.46C19.54,15.03 20.0,13.57 20.0,12.0c0.0,-4.42 -3.58,-8.0 -8.0,-8.0zm0.0,14.0c-3.31,0.0 -6.0,-2.69 -6.0,-6.0 0.0,-1.0 0.25,-1.9 0.7,-2.8L5.24,7.74C4.46,8.97 4.0,10.43 4.0,12.0c0.0,4.42 3.58,8.0 8.0,8.0l0.0,3.0l4.0,-4.0 -4.0,-4.0l0.0,3.0z"/>
+        android:pathData="M109.61377 123.08398C94.782227 100.67188 81.879883 81.177734 64.833496 55.43457 147.65283 70.384766 223.25195 84.042969 305.13086 98.826172 292.85254 176.14355 280.69727 252.67871 267.27197 337.21191c-21.375 -26.66601 -37.00195 -46.16015 -52.90136 -65.99707 -52.34766 62.36719 -39.82764 166.08692 2.84326 224.22657 56.18408 76.54394 141.05957 102.08496 257.1416 68.80078 -3.74414 29.44336 -7.20703 56.68945 -11.25 88.5498 39.46289 7.94531 78.33691 15.78516 117.75586 23.72168C519.88281 745.8418 332.64941 778.4668 194.37549 690.98047 96.11377 628.81543 39.934082 538.80664 19.459961 426.47363 -1.5371094 311.29297 38.466309 211.83594 109.61377 123.08398Z"
+        android:fillColor="#27ae60" />
 </vector>
