--- a/res/drawable/wifi_signal.xml
+++ b/res/drawable/wifi_signal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2014 The Android Open Source Project
+     Copyright (C) 2016 The Xperia Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -20,13 +21,12 @@
         <layer-list>
             <item>
                 <level-list>
-                    <item android:maxLevel="0" android:drawable="@drawable/ic_wifi_signal_1" />
-                    <item android:maxLevel="1" android:drawable="@drawable/ic_wifi_signal_2" />
-                    <item android:maxLevel="2" android:drawable="@drawable/ic_wifi_signal_3" />
-                    <item android:maxLevel="3" android:drawable="@drawable/ic_wifi_signal_4" />
+                    <item android:maxLevel="0" android:drawable="@drawable/ic_wifi_lock_signal_1" />
+                    <item android:maxLevel="1" android:drawable="@drawable/ic_wifi_lock_signal_2" />
+                    <item android:maxLevel="2" android:drawable="@drawable/ic_wifi_lock_signal_3" />
+                    <item android:maxLevel="3" android:drawable="@drawable/ic_wifi_lock_signal_4" />
                 </level-list>
             </item>
-            <item android:drawable="@drawable/ic_wifi_signal_lock" />
         </layer-list>
     </item>
     <item settings:state_encrypted="false">
