--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2007 The Android Open Source Project
+     Copyright (C) 2016 The Xperia Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,22 +16,23 @@
 -->
 
 <resources>
+
     <color name="black">#000</color>
     <color name="red">#F00</color>
     <color name="blue">#00F</color>
 
     <color name="material_empty_color_light">#FFCED7DB</color>
 
-    <color name="memory_used">#F00</color>
+    <color name="memory_used">@color/xosp_blue_palette_200</color>
     <color name="memory_avail">@color/material_empty_color_light</color>
-    <color name="memory_apps_usage">#00796B</color>
-    <color name="memory_downloads">#3367D6</color>
-    <color name="memory_dcim">#0097A7</color>
-    <color name="memory_music">#689F38</color>
-    <color name="memory_cache">#283593</color>
-    <color name="memory_misc">#7B1FA2</color>
-    <color name="memory_user_light">#479392</color>
-    <color name="memory_user_dark">#316665</color>
+    <color name="memory_apps_usage">#27ae60</color>
+    <color name="memory_downloads">#e74c3c</color>
+    <color name="memory_dcim">#d35400</color>
+    <color name="memory_music">#8e44ad</color>
+    <color name="memory_cache">#7f8c8d</color>
+    <color name="memory_misc">@color/theme_accent</color>
+    <color name="memory_user_light">@color/xosp_blue_palette_A200</color>
+    <color name="memory_user_dark">@color/xosp_blue_palette_A400</color>
 
     <color name="crypt_keeper_clock_background">#ff9a9a9a</color>
     <color name="crypt_keeper_clock_foreground">#ff666666</color>
@@ -45,62 +47,55 @@
     <color name="setup_lock_pattern_view_regular_color_light">@color/lock_pattern_view_regular_color</color>
     <color name="setup_lock_pattern_view_success_color_dark">#ff84ffff</color>
     <color name="setup_lock_pattern_view_success_color_light">@color/suw_color_accent_light</color>
-    <color name="setup_lock_pattern_view_error_color_dark">#fff44336</color>
+    <color name="setup_lock_pattern_view_error_color_dark">#c0392b</color>
     <color name="setup_lock_pattern_view_error_color_light">@color/lock_pattern_view_error_color</color>
     <color name="setup_wizard_wifi_color_dark">#89ffffff</color>
     <color name="setup_wizard_wifi_color_light">#89000000</color>
 
     <color name="lock_pattern_background">#00000000</color>
-    <color name="lock_pattern_view_regular_color">#ff37474f</color>
-    <color name="lock_pattern_view_error_color">@*android:color/system_error</color>
+    <color name="lock_pattern_view_regular_color">@color/theme_accent</color>
+    <color name="lock_pattern_view_error_color">#c0392b</color>
 
     <color name="lock_pattern_view_regular_color_dark">#ffffff</color>
 
     <color name="unlock_pattern_view_regular_color">@android:color/white</color>
     <color name="unlock_pattern_view_error_color">@*android:color/system_error</color>
 
-    <color name="fingerprint_title_area_bg">?android:attr/colorAccent</color>
+    <color name="fingerprint_title_area_bg">@color/theme_primary_dark</color>
     <color name="fingerprint_title_color">#ffffffff</color>
     <color name="fingerprint_message_color">#de000000</color>
-    <color name="fingerprint_progress_ring">?android:attr/colorAccent</color>
+    <color name="fingerprint_progress_ring">@color/theme_primary_dark</color>
     <color name="fingerprint_progress_ring_bg">#20000000</color>
     <color name="fingerprint_indicator_background_resting">#12000000</color>
 
-    <color name="running_processes_system_ram">#ff384248</color>
-    <color name="running_processes_free_ram">#ffced7db</color>
+    <color name="running_processes_system_ram">@color/xosp_midnight_palette_600</color>
+    <color name="running_processes_free_ram">@color/theme_primary_dark</color>
 
     <color name="card_background">#fffafafa</color>
 
     <color name="wifi_divider">#ffe0e0e0</color>
-    <color name="sim_noitification">@*android:color/material_deep_teal_500</color>
+    <color name="sim_noitification">@color/xosp_blue_palette_300</color>
 
     <color name="confirm_device_credential_transparent_black">#60000000</color>
     <color name="fab_ripple">#1fffffff</color><!-- 12% white -->
-    <color name="fab_shape">?android:attr/colorAccent</color>
+    <color name="fab_shape">@color/theme_primary_dark</color>
     <color name="voice_interaction_highlight">#33b5e5</color>
 
-    <drawable name="fp_enrollment_header_landscape">#009688</drawable>
+    <drawable name="fp_enrollment_header_landscape">@color/theme_primary_dark</drawable>
 
-    <color name="memory_normal">#ff009587</color>
-    <color name="memory_moderate">#ffF3B300</color>
-    <color name="memory_low">#ffff9700</color>
-    <color name="memory_critical">#ffff5621</color>
+    <color name="memory_normal">@color/theme_primary</color>
+    <color name="memory_moderate">#d35400</color>
+    <color name="memory_low">#e67e22</color>
+    <color name="memory_critical">#c0392b</color>
 
-    <color name="memory_avg_use">#ff384248</color>
+    <color name="memory_avg_use">@color/xosp_midnight_palette_500</color>
 
-    <color name="zen_rule_name_warning">@*android:color/system_error</color>
+    <color name="zen_rule_name_warning">#c0392b</color>
 
     <!-- Accent color that matches the settings launcher icon -->
-    <color name="icon_accent">#ffabffec</color>
-
+    <color name="icon_accent">@color/xosp_blue_palette_50</color>
     <color name="importance_icon_tint">#8a000000</color>
     <color name="importance_disabled_tint">#4d000000</color>
-
-    <color name="theme_accent">#d35400</color>
-
-    <!-- Accessibility SUW colors -->
-    <color name="material_blue_500">#4285F4</color>
-    <color name="material_blue_700">#3367D6</color>
 
     <color name="message_text_incoming">#ffffffff</color>
     <color name="message_text_outgoing">#ff323232</color>
@@ -115,12 +110,9 @@
     <color name="message_icon_text_outgoing">#ffffffff</color>
 
     <color name="seek_bar_preference_preview_text">#fff</color>
-
     <color name="importance_disabled_slider_color">@*android:color/material_grey_300</color>
     <color name="importance_secondary_slider_color">#858383</color>
-
     <color name="usage_graph_dots">#B0BEC5</color>
-
     <color name="card_background_grey">#eeeeee</color>
 
     <!-- Gestures settings -->
